--- a/config.gradle
+++ b/config.gradle
@@ -3,6 +3,7 @@ def rxBindingVersion = "0.4.0"
 def greenDAOVersion = "2.2.0"
 def retrofitVersion = "2.0.2"
 def stethoVersion = "1.3.1"
+def butterknifeVersion = "8.0.1"
 def leakCanaryVersion = "1.4-beta2"
 
 ext {
@@ -39,13 +40,13 @@ ext {
     picasso = "com.squareup.picasso:picasso:2.5.2"
 
     //json解析
-    fastjson = "com.alibaba:fastjson:1.2.11"
-    fastjsonAndroid = "com.alibaba:fastjson:1.1.51.android"
+    fastjson = "com.alibaba:fastjson:1.2.12"
+    fastjsonAndroid = "com.alibaba:fastjson:1.1.52.android"
 
     //view注入
-    dagger = "com.squareup.dagger:dagger:1.2.4"
-//    butterknife = "com.jakewharton:butterknife:8.0.1"
-    butterknife = "com.jakewharton:butterknife:7.0.1"
+    dagger = "com.squareup.dagger:dagger:1.2.5"
+    butterknife = "com.jakewharton:butterknife:${butterknifeVersion}"
+    butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
 
     //Rx家族，响应式编程
     rxJava = "io.reactivex:rxjava:1.1.5"
@@ -64,7 +65,7 @@ ext {
     retrofit = "com.squareup.retrofit2:retrofit:${retrofitVersion}"
     gsonForRetrofit = "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
     rxJavaForRetrofit = "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}"
-    okhttp = "com.squareup.okhttp3:okhttp:3.2.0"
+    okhttp = "com.squareup.okhttp3:okhttp:3.3.1"
     volley = "com.mcxiaoke.volley:library:1.0.19"
 
     //facebook出品的网络调试神器
@@ -93,30 +94,29 @@ ext {
     circleImageView = "de.hdodenhof:circleimageview:2.0.0"
 
     //Material Design向下兼容库(Android 2.2+)
-    carbon = "tk.zielony:carbon:0.12.0"
+    carbon = "tk.zielony:carbon:0.13.0"
     //RecyclerView分割线
     recyclerViewDivider = "com.yqritc:recyclerview-flexibledivider:1.2.9"
-    multipleStatusView = "com.classic.common:multiple-status-view:1.2"
     //通用适配器
     commonAdapter = "com.classic.adapter:commonadapter:1.1"
     //方便的切换到：加载中视图、错误视图、空数据视图、网络异常视图、内容视图。
-    mutipleStatusView = "com.classic.common:multiple-status-view:1.1"
-    flycoTabLayout = "com.flyco.tablayout:FlycoTabLayout_Lib:2.0.2@aar"
+    mutipleStatusView = "com.classic.common:multiple-status-view:1.2"
+
+    //布局控件
+    flycoTabLayout = "com.flyco.tablayout:FlycoTabLayout_Lib:2.0.6@aar"
     //Android流式布局，支持单选、多选等，适合用于产品标签等
     flowLayout = "com.zhy:flowlayout-lib:1.0.3"
-
     //google开源的一款新布局,综合了LinearLayout 和 RelativeLayout特性,及功能扩展
-    flexboxLayout = "com.google.android:flexbox:0.1.1"
+    flexboxLayout = "com.google.android:flexbox:0.1.3"
+    bottomBar = "com.roughike:bottom-bar:1.3.3"
 
     //日历控件
-    materialCalendarView = "com.prolificinteractive:material-calendarview:1.2.1"
+    materialCalendarView = "com.prolificinteractive:material-calendarview:1.3.0"
     sublimePicker = "com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1"
     pickerView = "com.bigkoo:pickerview:2.0.8"
 
     //图表控件
-    //repositories { maven { url "https://jitpack.io" } }
-    mpAndroidChart = "com.github.PhilJay:MPAndroidChart:v2.2.4"
-    //repositories { maven { url "https://jitpack.io" } }
+    mpAndroidChart = "com.github.PhilJay:MPAndroidChart:v2.2.5"
     helloCharts = "com.github.lecho:hellocharts-library:1.5.8@aar"
     williamChart = "com.diogobernardino:williamchart:2.2"
 
@@ -132,4 +132,5 @@ ext {
     materialDialog = "com.afollestad.material-dialogs:core:0.8.5.9"
 
     bottomBar = "com.roughike:bottom-bar:1.3.3"
+    flipViewPager = "com.yalantis:flipviewpager:1.0.0"
 }
