--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -24,10 +25,10 @@ dependencies {
     compile rootProject.ext.supportAppcompatV7
     compile rootProject.ext.supportDesign
     compile rootProject.ext.supportRecyclerView
-    compile rootProject.ext.supportCardView
     compile rootProject.ext.basicProject
     compile rootProject.ext.butterknife
     compile rootProject.ext.bottomBar
     compile rootProject.ext.commonAdapter
+    apt butterknifeCompiler
 
 }
