--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile rootProject.ext.butterknife
     compile rootProject.ext.bottomBar
     compile rootProject.ext.commonAdapter
+    compile rootProject.ext.materialEditText
+    compile rootProject.ext.materialSpinner
     apt butterknifeCompiler
 
 }
