--- a/config.gradle
+++ b/config.gradle
@@ -132,5 +132,9 @@ ext {
     materialDialog = "com.afollestad.material-dialogs:core:0.8.5.9"
 
     bottomBar = "com.roughike:bottom-bar:1.3.3"
-    flipViewPager = "com.yalantis:flipviewpager:1.0.0"
+    materialEditText = "com.rengwuxian.materialedittext:library:2.1.4"
+    materialSpinner = "com.jaredrummler:material-spinner:1.0.9"
+
+    umeng = "com.umeng.analytics:analytics:latest.integration"
+    pgyer = "com.pgyersdk:sdk:2.2"
 }
