--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile rootProject.ext.commonAdapter
     compile rootProject.ext.materialEditText
     compile rootProject.ext.materialSpinner
+    compile rootProject.ext.circleImageView
 
     compile rootProject.ext.sqlbrite
 
