--- a/config.gradle
+++ b/config.gradle
@@ -88,6 +88,7 @@ ext {
     //检测UI卡顿
     blockCanary = "com.github.moduth:blockcanary-android:1.2.1"
 
+    circleImageView = "de.hdodenhof:circleimageview:2.0.0"
     sublimePicker = "com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1"
     materialDialog = "com.afollestad.material-dialogs:core:0.8.5.9"
     bottomBar = "com.roughike:bottom-bar:1.3.9"
