--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile rootProject.ext.mpAndroidChart
 
     compile rootProject.ext.sqlbrite
+    compile rootProject.ext.rxJava
+    compile rootProject.ext.rxAndroid
 
     compile rootProject.ext.butterknife
     compile rootProject.ext.dagger2
