--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile rootProject.ext.bottomBar
     compile rootProject.ext.commonAdapter
     compile rootProject.ext.materialEditText
+    compile rootProject.ext.materialDialog
     compile rootProject.ext.materialSpinner
     compile rootProject.ext.fab
     compile rootProject.ext.sublimePicker
