--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,14 @@
         </activity>
         <activity android:name=".ui.activity.AddConsumerActivity"
             android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity android:name=".ui.activity.ThanksActivity"
+            android:launchMode="singleTop" />
     </application>
+
+    <meta-data
+        android:name="PGYER_APPID"
+        android:value="" />
+    <meta-data android:value="5780b5cde0f55a2e7f001086" android:name="UMENG_APPKEY" />
+    <meta-data android:value="pgyer" android:name="UMENG_CHANNEL"/>
 
 </manifest>
