--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
 
     compile rootProject.ext.umeng
     compile rootProject.ext.pgyer
+    compile rootProject.ext.leakCanaryDebug
 
 }
