--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile rootProject.ext.sqlbrite
     compile rootProject.ext.rxJava
     compile rootProject.ext.rxAndroid
+    compile rootProject.ext.rxPermissions
 
     compile rootProject.ext.butterknife
     compile rootProject.ext.dagger2
