--- a/config.gradle
+++ b/config.gradle
@@ -14,8 +14,8 @@ ext {
             applicationId    : "com.classic.car",
             minSdkVersion    : 14,
             targetSdkVersion : 23,
-            versionCode      : 2,
-            versionName      : "0.2"
+            versionCode      : 3,
+            versionName      : "0.3"
     ]
 
     //官方库
@@ -56,6 +56,7 @@ ext {
     rxBindingSupportDesign = "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}"
     rxBindingSupportRecyclerView = "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:${rxBindingVersion}"
     rxBindingLeanbackV17 = "com.jakewharton.rxbinding:rxbinding-leanback-v17:${rxBindingVersion}"
+    rxPermissions = "com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar"
 
     //网络请求
     retrofit = "com.squareup.retrofit2:retrofit:${retrofitVersion}"
