--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,6 @@ dependencies {
 
     compile rootProject.ext.umeng
     compile rootProject.ext.pgyer
+    compile rootProject.ext.blockCanary
 
 }
