--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     compile rootProject.ext.umeng
     compile rootProject.ext.pgyer
-    compile rootProject.ext.blockCanary
-    compile rootProject.ext.leakCanaryDebug
+//    compile rootProject.ext.blockCanary
+//    compile rootProject.ext.leakCanaryDebug
 
 }
