--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -48,6 +51,7 @@ dependencies {
     compile rootProject.ext.rxJava
     compile rootProject.ext.rxAndroid
     compile rootProject.ext.rxPermissions
+    compile rootProject.ext.rxBinding
 
     compile rootProject.ext.butterknife
     compile rootProject.ext.dagger2
