--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 def supportVersion = "24.2.0"
-def butterknifeVersion = "8.2.1"
+def butterknifeVersion = "8.4.0"
 def leakCanaryVersion = "1.4-beta2"
 def dagger2Version = "2.6"
 def rxBindingVersion = "0.4.0"
@@ -8,7 +8,7 @@ ext {
 
     android = [
             compileSdkVersion: 24,
-            buildToolsVersion: "24.0.1",
+            buildToolsVersion: "24.0.2",
             applicationId    : "com.classic.car",
             minSdkVersion    : 14,
             targetSdkVersion : 24,
@@ -33,7 +33,7 @@ ext {
     butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
 
     //Rx家族，响应式编程
-    rxJava = "io.reactivex:rxjava:1.1.9"
+    rxJava = "io.reactivex:rxjava:1.1.10"
     rxAndroid = "io.reactivex:rxandroid:1.2.1"
     rxPermissions = "com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar"
     rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
@@ -62,7 +62,7 @@ ext {
 
     sublimePicker = "com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1"
     materialDialog = "com.afollestad.material-dialogs:core:0.9.0.1"
-    bottomBar = "com.roughike:bottom-bar:2.+"
+    bottomBar = "com.roughike:bottom-bar:2.0.2"
     materialEditText = "com.rengwuxian.materialedittext:library:2.1.4"
     materialSpinner = "com.jaredrummler:material-spinner:1.1.0"
     fab = "com.melnykov:floatingactionbutton:1.3.0"
