Update library version

--- a/config.gradle
+++ b/config.gradle
@@ -1,8 +1,9 @@
-def supportVersion = "24.2.0"
+def supportVersion = "24.2.1"
 def butterknifeVersion = "8.4.0"
 def leakCanaryVersion = "1.4-beta2"
-def dagger2Version = "2.6"
+def dagger2Version = "2.7"
 def rxBindingVersion = "0.4.0"
+def blockCanaryVersion = "1.3.1"
 
 ext {
 
@@ -24,7 +25,7 @@ ext {
     supportRecyclerView = "com.android.support:recyclerview-v7:${supportVersion}"
 
     //基础项目
-    basicProject = "com.classic.core:classic:2.1"
+    basicProject = "com.classic.core:classic:2.2"
 
     //https://github.com/google/dagger
     dagger2 = "com.google.dagger:dagger:${dagger2Version}"
@@ -33,7 +34,7 @@ ext {
     butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
 
     //Rx家族，响应式编程
-    rxJava = "io.reactivex:rxjava:1.1.10"
+    rxJava = "io.reactivex:rxjava:1.2.0"
     rxAndroid = "io.reactivex:rxandroid:1.2.1"
     rxPermissions = "com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar"
     rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
@@ -58,14 +59,16 @@ ext {
     leakCanaryDebug = "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
     leakCanaryRelease = "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}"
     //检测UI卡顿
-    blockCanary = "com.github.moduth:blockcanary-android:1.2.1"
+    blockCanaryDebug = "com.github.markzhai:blockcanary-android:${blockCanaryVersion}"
+    blockCanaryRelease = "com.github.markzhai:blockcanary-no-op:${blockCanaryVersion}"
 
     sublimePicker = "com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1"
-    materialDialog = "com.afollestad.material-dialogs:core:0.9.0.1"
+    materialDialog = "com.afollestad.material-dialogs:core:0.9.0.2"
     bottomBar = "com.roughike:bottom-bar:2.0.2"
     materialEditText = "com.rengwuxian.materialedittext:library:2.1.4"
     materialSpinner = "com.jaredrummler:material-spinner:1.1.0"
     fab = "com.melnykov:floatingactionbutton:1.3.0"
+    logger = "com.orhanobut:logger:1.15"
 
     umeng = "com.umeng.analytics:analytics:latest.integration"
     pgyer = "com.pgyersdk:sdk:2.4.2"
