--- a/config.gradle
+++ b/config.gradle
@@ -1,18 +1,16 @@
-def supportVersion = "24.2.1"
+def supportVersion = "25.1.0"
 def butterknifeVersion = "8.4.0"
-def leakCanaryVersion = "1.5"
-def dagger2Version = "2.7"
-def rxBindingVersion = "0.4.0"
-def blockCanaryVersion = "1.3.1"
+def dagger2Version = "2.8"
+def rxBindingVersion = "1.0.0"
 
 ext {
 
     android = [
-            compileSdkVersion: 24,
-            buildToolsVersion: "24.0.3",
+            compileSdkVersion: 25,
+            buildToolsVersion: "25.0.2",
             applicationId    : "com.classic.car",
             minSdkVersion    : 14,
-            targetSdkVersion : 24,
+            targetSdkVersion : 25,
             versionCode      : 8,
             versionName      : "0.8"
     ]
@@ -25,7 +23,7 @@ ext {
     supportRecyclerView = "com.android.support:recyclerview-v7:${supportVersion}"
 
     //基础项目
-    basicProject = "com.classic.core:classic:2.2.1"
+    basicProject = "com.classic.android:core:1.0"
 
     //https://github.com/google/dagger
     dagger2 = "com.google.dagger:dagger:${dagger2Version}"
@@ -34,9 +32,8 @@ ext {
     butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
 
     //Rx家族，响应式编程
-    rxJava = "io.reactivex:rxjava:1.2.1"
+    rxJava = "io.reactivex:rxjava:1.2.5"
     rxAndroid = "io.reactivex:rxandroid:1.2.1"
-    rxPermissions = "com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar"
     rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
     rxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4:${rxBindingVersion}"
     rxBindingSupportAppcompatV7 = "com.jakewharton.rxbinding:rxbinding-appcompat-v7:${rxBindingVersion}"
@@ -45,31 +42,19 @@ ext {
     rxBindingLeanbackV17 = "com.jakewharton.rxbinding:rxbinding-leanback-v17:${rxBindingVersion}"
 
     //数据库
-    sqlbrite = "com.squareup.sqlbrite:sqlbrite:0.7.0"
-
+    sqlbrite = "com.squareup.sqlbrite:sqlbrite:1.1.1"
     //通用适配器
-    commonAdapter = "com.classic.adapter:commonadapter:1.2"
-    //方便的切换到：加载中视图、错误视图、空数据视图、网络异常视图、内容视图。
-    mutipleStatusView = "com.classic.common:multiple-status-view:1.2"
-
+    commonAdapter = "com.classic.adapter:commonadapter:1.5"
     //图表控件
     mpAndroidChart = "com.github.PhilJay:MPAndroidChart:v2.2.5"
 
-    //检测内存泄漏
-    leakCanaryDebug = "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
-    leakCanaryRelease = "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}"
-    //检测UI卡顿
-    blockCanaryDebug = "com.github.markzhai:blockcanary-android:${blockCanaryVersion}"
-    blockCanaryRelease = "com.github.markzhai:blockcanary-no-op:${blockCanaryVersion}"
-
     sublimePicker = "com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1"
-    materialDialog = "com.afollestad.material-dialogs:core:0.9.0.2"
+    materialDialog = "com.afollestad.material-dialogs:core:0.9.1.0"
     bottomBar = "com.roughike:bottom-bar:2.0.2"
     materialEditText = "com.rengwuxian.materialedittext:library:2.1.4"
     materialSpinner = "com.jaredrummler:material-spinner:1.1.0"
     fab = "com.melnykov:floatingactionbutton:1.3.0"
-    logger = "com.orhanobut:logger:1.15"
 
     umeng = "com.umeng.analytics:analytics:latest.integration"
-    pgyer = "com.pgyersdk:sdk:2.4.2"
+    pgyer = "com.pgyersdk:sdk:2.4.5"
 }
