--- a/config.gradle
+++ b/config.gradle
@@ -41,6 +41,8 @@ ext {
     rxBindingSupportRecyclerView = "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:${rxBindingVersion}"
     rxBindingLeanbackV17 = "com.jakewharton.rxbinding:rxbinding-leanback-v17:${rxBindingVersion}"
 
+    glide = "com.github.bumptech.glide:glide:3.7.0"
+
     //数据库
     sqlbrite = "com.squareup.sqlbrite:sqlbrite:1.1.1"
     //通用适配器
@@ -56,5 +58,5 @@ ext {
     fab = "com.melnykov:floatingactionbutton:1.3.0"
 
     umeng = "com.umeng.analytics:analytics:latest.integration"
-    pgyer = "com.pgyersdk:sdk:2.4.5"
+    pgyer = "com.pgyersdk:sdk:2.5.2"
 }
