--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.classic.car">
+          package="com.classic.car">
 
     <!-- 网络 -->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <!-- 存储卡 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <!-- 录制音频 -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:name=".app.CarApplication"
@@ -20,49 +20,60 @@
         android:theme="@style/CarTheme">
         <activity
             android:name=".ui.activity.MainActivity"
-            android:theme="@style/AppTheme"
-            android:launchMode="singleTask"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
-            android:resizeableActivity="true" >
+            android:launchMode="singleTask"
+            android:resizeableActivity="true"
+            android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <layout
-                android:gravity="top|end"
                 android:defaultHeight="@dimen/multi_window_height"
                 android:defaultWidth="@dimen/multi_window_width"
-                android:minWidth="@dimen/multi_window_min_width"
-                android:minHeight="@dimen/multi_window_min_height" />
+                android:gravity="top|end"
+                android:minHeight="@dimen/multi_window_min_height"
+                android:minWidth="@dimen/multi_window_min_width"/>
         </activity>
-        <activity android:name=".ui.activity.AddConsumerActivity"
-            android:theme="@style/AppTheme"
+        <activity
+            android:name=".ui.activity.AddConsumerActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:resizeableActivity="true"
-            android:windowSoftInputMode="stateHidden|adjustResize" >
-            <layout
-                android:gravity="top|end"
-                android:defaultHeight="@dimen/multi_window_height"
-                android:defaultWidth="@dimen/multi_window_width"
-                android:minWidth="@dimen/multi_window_min_width"
-                android:minHeight="@dimen/multi_window_min_height" />
-        </activity>
-        <activity android:name=".ui.activity.OpenSourceLicensesActivity"
             android:theme="@style/AppTheme"
-            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
-            android:resizeableActivity="true"
-            android:launchMode="singleTop" >
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <layout
-                android:gravity="top|end"
                 android:defaultHeight="@dimen/multi_window_height"
                 android:defaultWidth="@dimen/multi_window_width"
-                android:minWidth="@dimen/multi_window_min_width"
-                android:minHeight="@dimen/multi_window_min_height" />
+                android:gravity="top|end"
+                android:minHeight="@dimen/multi_window_min_height"
+                android:minWidth="@dimen/multi_window_min_width"/>
         </activity>
+        <activity
+            android:name=".ui.activity.OpenSourceLicensesActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:launchMode="singleTop"
+            android:resizeableActivity="true"
+            android:theme="@style/AppTheme">
+            <layout
+                android:defaultHeight="@dimen/multi_window_height"
+                android:defaultWidth="@dimen/multi_window_width"
+                android:gravity="top|end"
+                android:minHeight="@dimen/multi_window_min_height"
+                android:minWidth="@dimen/multi_window_min_width"/>
+        </activity>
+        <activity
+            android:name=".ui.activity.ChartActivity"
+            android:screenOrientation="landscape"/>
 
-        <meta-data android:name="PGYER_APPID" android:value="${PGYER_APPID}" />
-        <meta-data android:name="UMENG_APPKEY" android:value="${UMENG_APPKEY}" />
-        <meta-data android:name="UMENG_CHANNEL" android:value="${UMENG_CHANNEL}" />
+        <meta-data
+            android:name="PGYER_APPID"
+            android:value="${PGYER_APPID}"/>
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="${UMENG_APPKEY}"/>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL}"/>
     </application>
 </manifest>
