--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,16 @@
             android:name=".ui.activity.ChartActivity"
             android:screenOrientation="landscape"/>
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${APPLICATION_ID}.provider"
+            android:grantUriPermissions="true"
+            android:exported="false" >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
         <meta-data
             android:name="PGYER_APPID"
             android:value="${PGYER_APPID}"/>
