--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 def supportVersion = "25.3.1"
-def butterknifeVersion = "8.5.1"
+def butterKnifeVersion = "8.5.1"
 def dagger2Version = "2.10"
 def rxBindingVersion = "1.0.1"
 
@@ -7,7 +7,7 @@ ext {
 
     android = [
             compileSdkVersion: 25,
-            buildToolsVersion: "25.0.2",
+            buildToolsVersion: "25.0.3",
             applicationId    : "com.classic.car",
             minSdkVersion    : 14,
             targetSdkVersion : 25,
@@ -28,8 +28,8 @@ ext {
     //https://github.com/google/dagger
     dagger2 = "com.google.dagger:dagger:${dagger2Version}"
     dagger2Compiler = "com.google.dagger:dagger-compiler:${dagger2Version}"
-    butterknife = "com.jakewharton:butterknife:${butterknifeVersion}"
-    butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
+    butterknife = "com.jakewharton:butterknife:${butterKnifeVersion}"
+    butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
 
     //Rx家族，响应式编程
     rxJava = "io.reactivex:rxjava:1.2.9"
